feat: 게시글 내의 이미지들 placeholder추가

--- a/src/pages/Board/Detail/BoardDetail.module.css
+++ b/src/pages/Board/Detail/BoardDetail.module.css
@@ -67,10 +67,14 @@
   gap: 1rem;
 }
 
-.user_img {
-  width: 2rem;
-  height: 2rem;
+.user_img_box {
+  position: relative;
+
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: var(--radius-full);
+  overflow: hidden;
+  box-shadow: var(--shadow-sm);
 }
 
 .user_name {
