--- a/src/pages/Board/Detail/ReplyComment.module.css
+++ b/src/pages/Board/Detail/ReplyComment.module.css
@@ -12,10 +12,14 @@
   align-items: center;
 }
 
-.comment_user_img {
+.user_img_box {
+  position: relative;
+
   width: 2.5rem;
   height: 2.5rem;
   border-radius: var(--radius-full);
+  overflow: hidden;
+  box-shadow: var(--shadow-sm);
 }
 
 .flex_column {
@@ -29,9 +33,10 @@
   gap: 1.5rem;
 }
 
-.comment_user_name{
+.comment_user_name {
   font-size: var(--text-sm);
 }
+
 .comment_date,
 .recomment,
 .likeCount,
@@ -39,7 +44,8 @@
   font-size: var(--text-sm);
   color: var(--color-gray-400);
 }
-.comment_text{
+
+.comment_text {
   font-size: var(--text-sm);
   color: var(--color-text-primary);
 }
