--- a/src/pages/Board/BoardItem.module.css
+++ b/src/pages/Board/BoardItem.module.css
@@ -35,11 +35,14 @@
   align-items: center;
 }
 
-.user_image {
+.user_img_box {
+  position: relative;
+
   width: 3rem;
   height: 3rem;
   border-radius: var(--radius-full);
-  object-fit: cover;
+  overflow: hidden;
+  box-shadow: var(--shadow-sm);
 }
 
 .header_info_text {
