--- a/src/pages/Plan/Detail/PlanDetailWrapper.module.css
+++ b/src/pages/Plan/Detail/PlanDetailWrapper.module.css
@@ -1,3 +1,25 @@
+.empty {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.flex_column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.title {
+  font-size: var(--text-2xl);
+  font-weight: var(--font-weight-bold);
+}
+
 .container {
   flex: 1;
 
