--- a/src/pages/Destination/List/DestinationList.module.css
+++ b/src/pages/Destination/List/DestinationList.module.css
@@ -48,17 +48,24 @@
   gap: 1rem;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1100px) {
   .plan_container {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 820px) {
   .plan_container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media screen and (max-width: 480px) {
+  .plan_container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .footer {
   padding-top: 1rem;
   align-self: center;
