chore: 게시글 작성시 제목 20글자 제한 추가 및 에러 메시지 분리

--- a/src/pages/Board/FormEditor.module.css
+++ b/src/pages/Board/FormEditor.module.css
@@ -19,6 +19,12 @@
   justify-content: space-between;
 }
 
+.error {
+  font-size: var(--text-sm);
+  color: var(--color-red-500);
+  font-weight: var(--font-weight-bold);
+}
+
 :global(.ql-container) {
   height: 100%;
   flex: 1;
