fix: 게시글의 댓글에서 유저의 프로필 이미지 밀리는 현상 수정

--- a/src/pages/Board/Detail/Comment.module.css
+++ b/src/pages/Board/Detail/Comment.module.css
@@ -29,6 +29,8 @@
   border-radius: var(--radius-full);
   overflow: hidden;
   box-shadow: var(--shadow-md);
+
+  flex-shrink: 0;
 }
 
 .comment_container {
