--- a/src/pages/Board/Detail/CommentItem.module.css
+++ b/src/pages/Board/Detail/CommentItem.module.css
@@ -18,16 +18,35 @@
   border-radius: var(--radius-full);
   overflow: hidden;
   box-shadow: var(--shadow-sm);
+
+  flex-shrink: 0;
+}
+
+.up_icon {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .flex_column {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.7rem;
 }
 
 .comment_info {
   display: flex;
+  column-gap: 1.5rem;
+  row-gap: 0.5rem;
+
+  align-items: center;
+
+  flex-wrap: wrap;
+}
+
+.comment_box {
+  display: flex;
+  align-items: center;
   gap: 1.5rem;
 }
 
@@ -56,8 +75,9 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+
   box-sizing: border-box;
-  margin-left: 4rem;
+  padding-left: 3.5rem;
 }
 
 .current_user_img {
