--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,5 +1,5 @@
 .input {
-  width: fit-content;
+  width: 100%;
   border: 1px solid var(--color-gray-300);
   outline: none;
   box-sizing: border-box;
