--- a/src/pages/Plan/CreatePlan/FormCreatePlan.module.css
+++ b/src/pages/Plan/CreatePlan/FormCreatePlan.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 1rem;
 }
+
 .title {
   font-size: var(--text-2xl);
   margin-bottom: 2rem;
@@ -63,4 +64,7 @@
 .radio_label {
   position: relative;
   top: 2px;
+
+  white-space: nowrap;
+  min-width: 2rem;
 }
