--- a/src/pages/Home/Banner/BannerOverlay.module.css
+++ b/src/pages/Home/Banner/BannerOverlay.module.css
@@ -116,12 +116,8 @@
     position: absolute;
     inset: 0;
 
-    pointer-events: none;
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.2) 0%,
-      rgba(0, 0, 0, 1) 100%
-    );
+    backdrop-filter: blur(6px);
+    background-color: rgba(0, 0, 0, 0.2);
 
     z-index: -1;
   }
